update ws tests